--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -51,5 +51,12 @@
   "devDependencies": {
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1"
+  },
+  "eslintConfig": {
+  "extends": "react-app",
+  "rules": {
+    "react/react-in-jsx-scope": "off"
   }
+}
+
 }
